--- a/Cek/Style.css
+++ b/Cek/Style.css
@@ -1,6 +1,38 @@
+*,
+html{
+  margin: 0;
+  padding: 0;
+}
 body {
-  background-color: red ;
+  background-color: yellow ;
 }
 .nav-cont {
-  background-color: white;
+  background-color: #333 ;
+  width: 100%;
+  height: 100px;
+}
+.ul-nav{
+  display: flex;
+  background-color: blue;
+  height: 100px;
+  justify-content: center;
+  align-items: center;
+}
+.li-nav{
+  border: 1px solid white;
+  background-color: red;
+  list-style-type: none;
+  padding: 20px;
+  margin: 5px;
+  color: white;
+}
+.content-cont{
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.img-content{
+  width: 30%;
+  height: 30%;
 }
